--- a/android/MobageShellAppSDKSampleApp/shellAppSDKSample/src/main/AndroidManifest.xml
+++ b/android/MobageShellAppSDKSampleApp/shellAppSDKSample/src/main/AndroidManifest.xml
@@ -10,9 +10,6 @@
     <uses-permission android:name="com.android.vending.BILLING" />
 
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
-    <permission android:name="${applicationId}.permission.C2D_MESSAGE"
-                android:protectionLevel="signature" />
 
     <application
         android:allowBackup="true"
@@ -44,16 +41,32 @@
                   android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
 
         <!-- Remote Notification -->
-        <receiver android:name="com.mobage.android.shellappsdk.remotenotification.GcmBroadcastReceiver"
-                  android:permission="com.google.android.c2dm.permission.SEND">
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.mobage.android.shellappsdk.remotenotification.GcmIntentService" />
+        <service
+            android:name="com.mobage.android.shellappsdk.remotenotification.GcmIntentService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
 
+        <service
+            android:name="com.mobage.android.shellappsdk.remotenotification.IIDListenerService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
         <!-- Google play services -->
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
