--- a/android/MobageShellAppSDKSampleApp/shellAppSDKSample/build.gradle
+++ b/android/MobageShellAppSDKSampleApp/shellAppSDKSample/build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     compile project(':MobageShellAppSDKAndroid')
-    compile 'com.google.android.gms:play-services-base:10.2.1'
-    compile 'com.google.android.gms:play-services-ads:10.2.1'
-    compile 'com.google.android.gms:play-services-gcm:10.2.1'
+
+    compile 'com.google.android.gms:play-services-ads:15.0.1'
+    compile 'com.google.firebase:firebase-messaging:17.1.0'
+    compile 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
