--- a/android/MobageShellAppSDKSampleApp/shellAppSDKSample/src/main/AndroidManifest.xml
+++ b/android/MobageShellAppSDKSampleApp/shellAppSDKSample/src/main/AndroidManifest.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.mobage.am.shellapp.sample">
+    package="jp.mobage.am.shellapp.sample"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <uses-permission android:name="com.android.vending.BILLING" />
-
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -41,32 +37,26 @@
                   android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
 
         <!-- Remote Notification -->
-        <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="${applicationId}" />
-            </intent-filter>
-        </receiver>
+        <provider
+            android:name="com.google.firebase.provider.FirebaseInitProvider"
+            android:authorities="${applicationId}.firebaseinitprovider"
+            tools:node="remove"/>
 
         <service
-            android:name="com.mobage.android.shellappsdk.remotenotification.GcmIntentService"
+            android:name="com.mobage.android.shellappsdk.remotenotification.MessageService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name="com.mobage.android.shellappsdk.remotenotification.RemoteNotificationController$FcmMobageJobService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
         </service>
 
-        <service
-            android:name="com.mobage.android.shellappsdk.remotenotification.IIDListenerService"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID" />
-            </intent-filter>
-        </service>
+
         <!-- Google play services -->
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
