--- a/android/MobageShellAppSDKSampleApp/shellAppSDKSample/build.gradle
+++ b/android/MobageShellAppSDKSampleApp/shellAppSDKSample/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     compile project(':MobageShellAppSDKAndroid')
 
-    compile 'com.google.android.gms:play-services-ads:15.0.1'
-    compile 'com.google.firebase:firebase-messaging:17.1.0'
-    compile 'com.firebase:firebase-jobdispatcher:0.8.5'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.1.0'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
